--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,9 @@ body{
     width: 100%;
     height: 100vh;
 }
+h1, h2{
+    text-align: center;
+}
 .centerTop{
     position: absolute;
     top: 50%;
@@ -15,8 +18,7 @@ body{
     text-align: center;
 }
 .formInp{
-    width: 60%;
-    
+    width: 60%;    
 }
 .formSearch{
     border: none;
@@ -48,3 +50,27 @@ body{
     font-size: 18px;
 }
 
+.extraDet{
+    width: 100%;
+    display: flex;
+    flex-direction: row wrap;
+    justify-content: space-evenly;
+    /* background: pink; */
+}
+.det{
+    display: flex;
+    flex-direction: column;
+    background: rgb(233, 233, 233);
+    box-shadow: 0px 0px 0px rgba(0,0,0,0.3);
+    text-align: center;
+    /* line-height: 100px; */
+    font-size: 30px;
+    padding:2% 4%;
+}
+.det img{
+    width: 100px;
+    height: 100px;
+    margin: 1%;
+    font-size: 18px;
+    font-weight: normal;
+}
