--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ body{
     width: 100%;
     height: 100vh;
 }
-h1, h2{
+h1, h2,h5{
     text-align: center;
 }
 .centerTop{
@@ -28,7 +28,7 @@ h1, h2{
     padding: 1%;
     font-size: 18px;
     font-weight: bold;
-    color: #3b3939;
+    color: #505050;
     letter-spacing: 1px;
     word-spacing: 2px;
 }
@@ -54,23 +54,27 @@ h1, h2{
     width: 100%;
     display: flex;
     flex-direction: row wrap;
-    justify-content: space-evenly;
-    /* background: pink; */
+    justify-content: space-around;
+    margin-bottom: 2%;
 }
 .det{
     display: flex;
     flex-direction: column;
-    background: rgb(233, 233, 233);
-    box-shadow: 0px 0px 0px rgba(0,0,0,0.3);
+    border-radius: 4px;
+    box-shadow: 0px 2px 4px rgba(0,0,0,0.3);
     text-align: center;
-    /* line-height: 100px; */
-    font-size: 30px;
+    font-size: 18px;
+    font-weight: bold;
     padding:2% 4%;
+}
+.det span{
+    font-size: 36px;
+    
 }
 .det img{
     width: 100px;
     height: 100px;
-    margin: 1%;
+    margin:1% auto;
     font-size: 18px;
     font-weight: normal;
 }
